--- a/public/index.html
+++ b/public/index.html
@@ -1,13 +1,47 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Roshambo</title>
-    <link rel="stylesheet" href="/screen.css">
-  </head>
-  <body>
-    <h1>Hello, World!</h1>
-    <script src="/main.js" charset="utf-8"></script>
-  </body>
+
+<head lang="en">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Roshambo</title>
+  <link rel="stylesheet" href="/screen.css">
+</head>
+
+<body>
+
+  <header>
+    <h1>Roshambo!</h1>
+  </header>
+
+  <main>
+
+    <aside>
+      <h2>Player 1</h2>
+      <ul>
+        <li><button class="player-one-rock-button">Rock</button></li>
+        <li><button class="player-one-paper-button">Paper</button></li>
+        <li><button class="player-one-scissors-button">Scissors</button></li>
+      </ul>
+    </aside>
+
+    <section>
+      <h3>Player Wins!</h3>
+    </section>
+
+    <aside>
+      <h2>Player 2</h2>
+      <ul>
+        <li><button class="player-two-rock-button">Rock</button></li>
+        <li><button class="player-two-paper-button">Paper</button></li>
+        <li><button class="player-two-scissors-button">Scissors</button></li>
+      </ul>
+    </aside>
+
+  </main>
+
+
+  <script src="/main.js" charset="utf-8"></script>
+</body>
+
 </html>
