--- a/public/index.html
+++ b/public/index.html
@@ -16,12 +16,12 @@
 
   <main>
 
-    <aside>
+    <aside class="player-1">
       <h2>Player 1</h2>
       <ul>
-        <li><button class="player-one-rock-button">Rock</button></li>
-        <li><button class="player-one-paper-button">Paper</button></li>
-        <li><button class="player-one-scissors-button">Scissors</button></li>
+        <li><button class="rock">Rock</button></li>
+        <li><button class="paper">Paper</button></li>
+        <li><button class="scissors">Scissors</button></li>
       </ul>
     </aside>
 
@@ -29,12 +29,12 @@
       <h3>Player Wins!</h3>
     </section>
 
-    <aside>
+    <aside class="player-2">
       <h2>Player 2</h2>
       <ul>
-        <li><button class="player-two-rock-button">Rock</button></li>
-        <li><button class="player-two-paper-button">Paper</button></li>
-        <li><button class="player-two-scissors-button">Scissors</button></li>
+        <li><button class="rock">Rock</button></li>
+        <li><button class="paper">Paper</button></li>
+        <li><button class="scissors">Scissors</button></li>
       </ul>
     </aside>
 
