added play again button

--- a/public/index.html
+++ b/public/index.html
@@ -40,6 +40,10 @@
 
   </main>
 
+  <footer>
+    <button onclick="location=URL" class="replay">Play Again</button>
+  </footer>
+
 
   <script src="/main.js" charset="utf-8"></script>
 </body>
