--- a/public/index.html
+++ b/public/index.html
@@ -40,8 +40,8 @@
 
   </main>
 
-  <footer>
-    <button onclick="location=URL" class="replay">Play Again</button>
+  <footer class="replay">
+    <button class="replay-button">Play Again</button>
   </footer>
 
 
