--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,15 @@
     <h1>Roshambo!</h1>
   </header>
 
+  <section>
+    <h3>Ready?</h3>
+  </section>
+
   <main>
 
     <aside class="player-1">
       <h2>Player 1</h2>
+      <p class="player-1-choice">Player 1 has made their choice!</p>
       <ul>
         <li><button class="rock">Rock</button></li>
         <li><button class="paper">Paper</button></li>
@@ -25,12 +30,9 @@
       </ul>
     </aside>
 
-    <section>
-      <h3>Ready?</h3>
-    </section>
-
     <aside class="player-2">
       <h2>Player 2</h2>
+      <p class="player-2-choice">Player 2 has made their choice!</p>
       <ul>
         <li><button class="rock">Rock</button></li>
         <li><button class="paper">Paper</button></li>
